# volora

./: .gitignore  flake.nix  platformio.ini  pyproject.toml  requirements.txt
app/: AudioHelper.py  CodecHelper.py  SerialHelper.py  SoxHelper.py  VirtualSerial.py  main.py  main2.py  main3.py  requirements.txt  setup.py
app/interface/notebooks/: post_encode.sh
app/notebooks/: post_record.sh  test_encoding.ipynb  test_raw_listen.ipynb  test_recording.ipynb  test_wav_tty.ipynb
app/tests/: test_audio_helper.py  test_serial_helper.py  test_virtual_serial.py
src/: main.cpp  main.tmp
src/creatingRawFile/: capture.py  check.py  readandwrite.py  readandwrite2.py
src/interface/: main.py
src/interface-s2t/: input.m4a  input2.m4a  mic_test.py  transcribe.py  transcribe2.py
src/interface/notebooks/: post_encode.sh  post_record.sh  test_encoding.ipynb  test_recording.ipynb
